--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".SignUpActivity"/>
-        <activity android:name=".GroupChatActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".CreateJoinGroup"/>
+        <activity android:name=".GroupChatActivity"/>
+        <activity android:name=".ImageUploadActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,5 +25,4 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
 </manifest>
